# comic-cover-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg
.dvc/: config
.github/workflows/: workflow.yml
comic_cover_generator/: _version.py  typing.py
comic_cover_generator/ml/: constants.py  dataset.py  loss.py  model.py  train.py  utils.py
comic_cover_generator/ml/model/: __init__.py  base.py  critic.py  diffaugment.py  gan.py  generator.py  seq2vec.py  utils.py
comic_cover_generator/ml/model/training_strategy/: __init__.py  base.py  nsgan.py  wgan_gp.py
conf/: .gitignore
conf/templates/train/: config.yaml  train.yaml
conf/templates/train/datamodule/: cover_datamodule.yaml
conf/templates/train/dataset/: cover-dataset.yaml  cover_dataset.yaml
conf/templates/train/model/: gan.yaml
data/: dev_subset.dvc
tests/: test_utils.py
tests/fixtures/: __init__.py  constants.py
tests/ml/: test_loss.py
tests/ml/dataset/: conftest.py  test_dataset.py
tests/ml/model/: conftest.py  test_base.py  test_critic.py  test_discriminator.py  test_generator.py  test_lightning_model.py
tests/ml/model/training_strategy/: test_wgan_gp.py
