[tool.pytest.ini_options]
addopts = "-ra"
minversion = "6.2"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["tests/fixtures/*"]
source = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.black]
experimental-string-processing = true
include = '\.pyi?$'
line-length = 88

[tool.isort]
known_first_party = ["nn_core"]
known_local_folder = "comic_cover_generator"
known_third_party = ["PIL", "h5py", "numpy", "pandas", "pytest", "pytorch_lightning", "setuptools", "torch", "torchvision", "tqdm"]
line_length = 88
profile = 'black'

[tool.setuptools_scm]
write_to = "comic_cover_generator/_version.py"
write_to_template = '__version__ = "{version}"'

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==59.5", "wheel", "setuptools_scm[toml]>=6.3.1"]
