[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--disable-pytest-warnings",
  "-ra",
  "--cov",
]
markers = [
  "training: tests that involve training",
]
minversion = "6.2"
python_files = "test_*.py"
testpaths = ["tests/"]

[tool.coverage.run]
branch = true
omit = ["comic_cover_generator/typing.py"]
relative_files = true
source = ["comic_cover_generator/"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.black]
include = '\.pyi?$'
line-length = 88
preview = true

[tool.isort]
known_local_folder = "comic_cover_generator/"
known_third_party = ["PIL", "h5py", "hydra", "matplotlib", "mlflow", "numpy", "omegaconf", "pandas", "pytest", "pytorch_lightning", "setuptools", "torch", "torchmetrics", "torchvision", "tqdm"]
line_length = 88
profile = 'black'

[tool.setuptools_scm]
write_to = "comic_cover_generator/_version.py"
write_to_template = '__version__ = "{version}"'

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==59.5", "wheel", "setuptools_scm[toml]>=6.3.1"]
