[metadata]
name = comic-cover-generator
description = A comic cover generator using machine learning
url = https://github.com/FeryET/comic-covers-generator
long_description = file: README.md
author = Farhood Etaati
author_email = farhoodetaati@gmail.com
keywords = python, deep learning, machine learning,
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =comic_cover_generator/
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    torchmetrics[image]
    hydra-core
    mlflow>=1.21.0
    streamlit
    fastapi
    h5py
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    dvc[s3]
    rich[jupyter]
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=comic_cover_generator/

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mkdocstrings
    mike

test =
    pytest
    pytest-cov
    pytest-mock



tools =
    black
    flake8
    flake8-docstrings
    isort
    pre-commit
    ipykernel
    jupyterlab
    pymysql


dev =
    %(tools)s
    %(test)s
    %(docs)s
